vulkan-loader (1.1.97-1) UNRELEASED; urgency=medium

  * New upstream release.
  * sync_headers.sh, watch: Modified for upstream tag format change.
    Thanks, Jens Reyer!
  * README.source: Fixes to the workflow, thanks Jens Reyer!

 -- Timo Aaltonen <tjaalton@debian.org>  Sun, 13 Jan 2019 16:24:54 +0200

vulkan-loader (1.1.82.0-1) experimental; urgency=medium

  * New upstream release from the vulkan-loader repo.
  * Remove embedded glslang.
  * copyright: Drop Files-Excluded, the repo doesn't have them anymore.
  * control, copyright, watch: Fix upstream repo name.
  * Drop vulkan-utils.
  * Purge patches that were for demos, layers or external repos.
  * Remove d/get-external.sh, which is obsolete.
  * Drop layer & build cruft.
  * control: Drop python3-lxml, -distutils from build-depends.
  * d/s/include-binaries: Removed, obsolete.
  * dirs: Add /etc/vulkan/icd.d.
  * Use compat level 11.
  * rules: Use dh_missing.
  * Import vulkan-headers and ship the files in libvulkan-dev.
  * control: Bump policy to 4.2.0, no changes.
  * README.source: Updated for vulkan-loader.
  * control: Fix VCS urls.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 11 Sep 2018 17:18:05 +0300

vulkan (1.1.73+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Move layers from libvulkan-dev to libvulkan1. (Closes: #891582)
  * control: Add python3-distutils to build-depends. (Closes: #896796)
  * Refresh patches.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 04 May 2018 13:18:00 +0300

vulkan (1.1.70+dfsg1-1) unstable; urgency=medium

  * New upstream release.
  * fix-pkgconfig.diff: Fix wrong libdir in vulkan.pc. (LP: #1754288)

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 12 Mar 2018 15:39:40 +0200

vulkan (1.0.68+dfsg1-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * copyright: Updated. (Closes: #881014)
  * patches: Refreshed.
  * get-external.sh: Use upstream script to update glslang and spirv-
    tools/headers.