@@ -1,9 +1,12 @@
 vulkan-loader (1.1.97-1) UNRELEASED; urgency=medium
 
+  [ Timo Aaltonen ]
   * New upstream release.
+
+  [ Jens Reyer ]
   * sync_headers.sh, watch: Modified for upstream tag format change.
-    Thanks, Jens Reyer!
-  * README.source: Fixes to the workflow, thanks Jens Reyer!
+  * README.source: Fixes to the workflow.
+  * rules: Use dpkg library instead of dpkg-parsechangelog.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Sun, 13 Jan 2019 16:24:54 +0200
 
